@startuml
'https://plantuml.com/class-diagram

users -- usergallery
usergallery -- questrewards
users --- questprogression

quests -- questitems
questitems -- questprogression


class users {
    string - email
    string - password
    string - role
    PK email()
}

class usergallery {
    string - user_email
    int - reward_id

    PK user_email()
    PK FK reward_id()
}

class quests {
    int - quest_id
    string - galleryname
    string - gallerydescription
    int - itemcount
    PK quest_id()
}

class questrewards {
    int - reward_id
    string - picturename
    string - picturedescription
    string - picturetitle
    PK reward_id()
}

class questitems {
    int - item_id
    int - guest_id

    PK item_id()
    FK quest_id()
}

class questprogression {
    int - user_id
    int - item_id
    PK FK user_id()
    PK FK item_id()
}

@enduml